force-app/main/default/objects/Business_Address__c/Business_Address__c.object-meta.xml
<CustomObject>
    <description>Custom object to store one or more addresses associated with the business account</description>
    <label>Business Address</label>
    <nameField>
        <label>Business Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>