force-app/main/default/objects/Business_Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account to which this Business Address is associated</description>
    <inlineHelpText>Account to which this Business Address is associated</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Addresses</relationshipLabel>
    <relationshipName>Business_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>