force-app/main/default/objects/Business_Address__c/fields/Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_Id__c</fullName>
    <description>Unique identifier for the address which we can pass to appropriate micro services to perform updates if necessary.</description>
    <inlineHelpText>Unique identifier for the address which we can pass to appropriate micro services to perform updates if necessary.</inlineHelpText>
    <label>Address Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>