force-app/main/default/objects/Business_Address__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>The first line of the address. For example, number or street. For example, `173 Drury Lane`. Required for data entry and compliance and risk checks. Must contain the full address.</description>
    <inlineHelpText>The first line of the address. For example, number or street. For example, `173 Drury Lane`. Required for data entry and compliance and risk checks. Must contain the full address.</inlineHelpText>
    <label>Address Line 1</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>