force-app/main/default/objects/Business_Address__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <description>The second line of the address. For example, suite or apartment number.</description>
    <inlineHelpText>The second line of the address. For example, suite or apartment number.</inlineHelpText>
    <label>Address Line 2</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>