force-app/main/default/objects/Business_Address__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <description>The third line of the address, if needed. For example, a street complement for Brazil, direction text, such as `next to Walmart`, or a landmark in an Indian address.</description>
    <inlineHelpText>The third line of the address, if needed. For example, a street complement for Brazil, direction text, such as `next to Walmart`, or a landmark in an Indian address.</inlineHelpText>
    <label>Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>