force-app/main/default/objects/Business_Address__c/fields/Admin_Area_1__c.field-meta.xml
<CustomField>
    <fullName>Admin_Area_1__c</fullName>
    <description>The highest level sub-division in a country, which is usually a province, state, or ISO-3166-2 subdivision. Format for postal delivery. For example, &apos;CA&apos; and not &apos;California&apos;. Value, by country, is:
UK. A county.
US. A state.
Canada. A province.
Japan. A prefecture.
Switzerland. A kanton.</description>
    <inlineHelpText>The highest level sub-division in a country, which is usually a province, state, or ISO-3166-2 subdivision.</inlineHelpText>
    <label>Admin Area 1</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>