force-app/main/default/objects/Business_Address__c/fields/Admin_Area_2__c.field-meta.xml
<CustomField>
    <fullName>Admin_Area_2__c</fullName>
    <description>A city, town, or village. Smaller than &apos;admin_area_level_1&apos;.</description>
    <inlineHelpText>A city, town, or village. Smaller than &apos;admin_area_level_1&apos;.</inlineHelpText>
    <label>Admin Area 2</label>
    <length>120</length>
    <type>Text</type>
</CustomField>