force-app/main/default/objects/Business_Address__c/fields/Admin_Area_3__c.field-meta.xml
<CustomField>
    <fullName>Admin_Area_3__c</fullName>
    <description>A sub-locality, suburb, neighborhood, or district. Smaller than &apos;admin_area_level_2&apos;. Value is:
Brazil. Suburb, bairro, or neighborhood.
India. Sub-locality or district. Street name information is not always available but a sub-locality or district can be a very small area.</description>
    <inlineHelpText>A sub-locality, suburb, neighborhood, or district. Smaller than &apos;admin_area_level_2&apos;.</inlineHelpText>
    <label>Admin Area 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>