force-app/main/default/objects/Business_Address__c/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <description>Address Confirmation Status</description>
    <inlineHelpText>Address Confirmation Status</inlineHelpText>
    <label>Confirmation Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>