force-app/main/default/objects/Business_Address__c/fields/Is_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Confirmed</label>
    <type>Checkbox</type>
</CustomField>