force-app/main/default/objects/Business_Address__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>The postal code, which is the zip code or equivalent. Typically required for countries with a postal code or an equivalent. See [postal code](https://en.wikipedia.org/wiki/Postal_code).</description>
    <inlineHelpText>The postal code, which is the zip code or equivalent.</inlineHelpText>
    <label>Postal Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>