force-app/main/default/objects/Business_Address__c/fields/Tags_JSON__c.field-meta.xml
<CustomField>
    <fullName>Tags_JSON__c</fullName>
    <label>Tags JSON</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>