force-app/main/default/objects/Business_Address__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Address Type</description>
    <inlineHelpText>Address Type</inlineHelpText>
    <label>Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>